--- a/remap.html
+++ b/remap.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <title>Animalese Typing</title>
     <link rel="stylesheet" href="assets\styles\main.css">
+    <link id="theme-style" rel="stylesheet" href="assets\styles\themes\default.css" />
 </head>
 </html>
 <body>
